# ziplime

./: .gitignore  Dockerfile  END_USER_LICENSE_AGREEMENT  LICENSE  README.md  deploy.sh  pyproject.toml  release-notes.md  test.py  test2.py  test_live_trade.py
.github/workflows/: publish-to-pypi.yml
examples/: ingest_data.py  run_live_trading.py  run_simulation.py  test.py  test2.py  test_algo.py  test_live_trade.py
examples/algorithms/: test_algo.py
ziplime/: __main__.py  algorithm.py  algorithm_live.py  api.py  errors.py  protocol.py
ziplime/alembic/: env.py
ziplime/assets/: __init__.py  asset_writer.py  assets.py  continuous_futures.py  utils.py
ziplime/config/: algorithm_config.py  base_algorithm_config.py  register_bundles.py
ziplime/constants/: bundles.py  data_type.py  default_columns.py  fundamental_data.py  logging_event.py  period.py  stock_symbols.py
ziplime/core/: algorithm_executor.py  algorithm_file.py  base_task.py  ingest_data.py  run_live_trading.py  run_simulation.py  string_utils.py
ziplime/data/: abstract_data_bundle.py  abstract_fundamendal_data_provider.py  abstract_historical_market_data_provider.py  abstract_live_market_data_provider.py  adjustments.py  bcolz_daily_bars.py  bcolz_minute_bars.py  benchmarks.py  bundled_market_data_provider.py  data_portal.py  data_portal_live.py  dispatch_bar_reader.py  history_loader.py  lime_data_provider.py  loader.py  market_data_provider.py
ziplime/db/: annotated_types.py  base.py  base_model.py
ziplime/domain/: account.py  bar_data.py  benchmark_spec.py  column_specification.py  data_frequency.py  event.py  inner_position.py  lime_quote.py  order.py  portfolio.py  position.py
ziplime/exchanges/: exchange.py  simulation_exchange.py
ziplime/finance/: asset_restrictions.py  cancel_policy.py  commission.py  constants.py  controls.py  execution.py  finance_ext.py  ledger.py  metrics_tracker.py  slippage.py  trading.py  transaction.py  utils.py
ziplime/gens/: realtimeclock.py  sim_engine.py  simulation_clock.py  tradesimulation.py
ziplime/lib/: adjusted_array.py  adjustment.py  factorize.py  labelarray.py  rank.py  windowtemplate.py
ziplime/pipeline/: api_utils.py  domain.py  downsample_helpers.py  dtypes.py  engine.py  expression.py  graph.py  mixins.py  pipeline.py  sentinels.py  term.py  visualize.py
ziplime/sources/: benchmark_source.py
ziplime/trading/: base_trading_algorithm.py  trading_algorithm.py  trading_signal_executor.py
(+235 files in other folders)
