[tool.poetry]
name = "ziplime"
version = "0.1.18"
description = ""
authors = ["Ziplime"]
readme = "README.md"
packages = [{include = "ziplime"}]

[tool.poetry.dependencies]
python = "^3.12"
zipline-reloaded = "3.1"
dask = "^2024.9.1"
setuptools = "^72.1.0"
lime-trader-sdk = "^0.3.9"
limexhub = "^0.1.27"
joblib = "^1.4.2"
pygments = "^2.18.0"

[tool.poetry.scripts]
ziplime = "ziplime.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
