[tool.poetry]
name = "ziplime"
version = "1.6.26"
description = ""
authors = ["Ziplime"]
readme = "README.md"
packages = [{include = "ziplime"}]

[tool.poetry.dependencies]
python = "^3.12"
aiocache = "^0.12.3"
aiofiles = "^24.1.0"
aiosqlite = "^0.21.0"
alembic = "^1.15.2"
asyncclick = "^8.1.8"
empyrical-reloaded = "^0.5.11"
exchange-calendars = "^4.10"
greenlet = "^3.2.2"
h5py = "^3.13.0"
iso3166 = "^2.1.1"
iso4217 = "^1.12.20240625"
joblib = "^1.5.1"
lime-trader-sdk = "^0.3.9"
limexhub = "^0.1.30"
networkx = "^3.4.2"
numexpr = "^2.10.2"
orjson = "^3.10.15"
pandas = "^2.0.0"
polars = "^1.24.0"
pyarrow = "^19.0.1"
pydantic = "^2.11.2"
pygments = "^2.18.0"
scipy = "^1.15.3"
setuptools = "^79.0.1"
sqlalchemy = "^2.0.40"
structlog = "^25.4.0"
tabulate = "^0.9.0"

[tool.poetry.scripts]
ziplime = "ziplime.__main__:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
